styles/deposits-and-withdrawals.css
/* ... */
.back-to-top:hover {
  transform: translateY(-5px);
  -webkit-transform: translateY(-5px);
  /* WebKit prefix */
  transition: transform 0.3s ease;
  -webkit-transition: transform 0.3s ease;
  /* WebKit prefix */
}

.svg-logo {
  /* filter: drop-shadow(0px 0px 15px #48f7884b) !important; */
}


.footer {
  background-color: #171a20;
}

.footer a {
  color: #d2d2d2;
}

.footer a:hover {
  color: #3ab8db;
}

.disclaimer {
  font-size: small;
  font-weight: 100;
}

.footer-section-title,
.footer-section-title {
  font-weight: 500;
}


.tradingview-widget-container {
  display: flex;
  z-index: 2;
  position: absolute;
  left: 0;
  top: 75dvh;
  flex-direction: column;
}

.fourgound-loader {
  width: 100dvw;
  height: 100dvh;
  position: fixed;
  display: none;
  left: 0;
  top: 0;
  z-index: 99999;
  background-color: #171A20;
  /* -webkit-animation: fade-out 1s ease-out both;
  animation: fade-out 1s ease-out both; */
}

.tradingview-widget-container {
  -webkit-animation: swing-in-top-fwd 2s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
  animation: swing-in-top-fwd 2s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
}


/* ----------------------------------------------
 * Generated by Animista on 2025-1-23 10:34:41
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation swing-in-top-fwd
 * ----------------------------------------
 */
@-webkit-keyframes swing-in-top-fwd {
  0% {
    -webkit-transform: rotateX(-100deg);
    transform: rotateX(-100deg);
    -webkit-transform-origin: top;
    transform-origin: top;
    opacity: 0;
  }

  100% {
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    -webkit-transform-origin: top;
    transform-origin: top;
    opacity: 1;
  }
}

@keyframes swing-in-top-fwd {
  0% {
    -webkit-transform: rotateX(-100deg);
    transform: rotateX(-100deg);
    -webkit-transform-origin: top;
    transform-origin: top;
    opacity: 0;
  }

  100% {
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
    -webkit-transform-origin: top;
    transform-origin: top;
    opacity: 1;
  }
}

#partnerSection {
  text-align: center;
  padding-top: 450px;
  max-width: 960px;
  width: 60%;
}

.partnerSection__title {
  font-size: 2.5em;
  color: #ffffff;
  margin-bottom: 10px;
}

.partnerSection__description {
  font-size: 1em;
  color: #ffffff;
  margin-bottom: 30px;
}

.partnerLogoGrid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); /* Responsive grid */
  gap: 15px;
  margin-bottom: 30px;
}

.partnerLogoItem {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px;
  border-radius: 5px;
  background: rgba(0, 0, 0, 0.19);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

.partnerLogoItem__image {
  max-width: 100%;
  height: auto;
  display: block; /* To prevent extra space below image */
  /* filter: grayscale(100%); Apply grayscale filter */
}

.tradingview-widget-container{
  display: flex;
  z-index: 2;
  position: absolute;
  left: 0;
  top: 75dvh;
  flex-direction: column;
  margin-top: -150px;
}

